# avataa-state

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  supervisord.conf
app/: .flake8  alembic.ini  init_app.py  main.py  run_grpc.py
app/common_security/: security.py
app/common_settings/: config.py
app/exception_manager/: manager.py
app/grpc_settings/grpc_server/: grpc_method_processer.py
app/grpc_settings/protobuf_storage/airflow_manager/: servicer.py
app/grpc_settings/protobuf_storage/frontend_settings_proto/: frontend_settings.proto  frontend_settings_pb2.py  frontend_settings_pb2.pyi  (+1 more)
app/migrations/: env.py
app/migrations/versions/: 03-06-2024__16-47-04__40e4192e8546__add_permission_table.py  07-05-2024__11-51-58__8b531ffe87b5__first_migration.py  07-05-2024__11-59-53__c875424dbf9b__add_indexes_for_kpi_values.py  10-05-2024__16-46-11__ae770d64f644__added_label_for_kpi.py  13-06-2024__14-03-32__e68cc32aae26__add_related_kpi.py  15-07-2024__17-03-40__450bf0c20bff__add_group_for_kpi.py  17-05-2024__11-08-04__50f2dad864b6__add_on_delete_cascade_for_foreign_keys.py  25-08-2024__11-33-09__328d614e7265__parent_child_links.py  27-08-2024__13-58-54__3ed206a37e48__add_field_brach.py
app/services/kpi_services/: service.py
app/v1/: main.py
app/v1/database/: database.py  schemas.py
app/v1/models/: granularity.py  kpi.py  kpi_values.py  request_models.py
app/v1/security/: security_data_models.py  utils.py
app/v1/settings/: config.py
app/v1/utils/: val_type_deserializers.py  val_type_serializers.py  val_type_validators.py
(+25 files in other folders)
